# hunt

./: .env.example  .gitignore  README.md  ROADMAP.md  pyproject.toml  requirements.txt
hunt/: __init__.py  batch_processor.py  config.py  job_analyzer.py  linkedin_client.py  negotiation.py  pdf_generator.py  resume_processor.py  scanner.py
resume_tailor/: batch_processor.py  claude_engine.py  cli.py  config.py  evaluator.py  github_client.py  models.py  output_manager.py  pdf_generator.py  scanner.py  story_bank.py
templates/: cv-template.html  portals.example.yml
